k8s/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-backend
  labels:
    app: flask-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-backend
  template:
    metadata:
      labels:
        app: flask-backend
    spec:
      containers:
      - name: flask-backend
        image: group9-backend:v1.6
        imagePullPolicy: Never
        command: [ "flask", "run", "--host=0.0.0.0", "--port=8000", "--debug" ]
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: flask-backend
spec:
  type: LoadBalancer
  selector:
    app: flask-backend
  ports:
  - port: 80
    targetPort: 8000
